The changed PHP codes.

--- a/PHP_Codes/upload.html
+++ b/PHP_Codes/upload.html
@@ -7,6 +7,9 @@
 Select a file to upload: <br />
 <form action="/app/file_uploader.php" method="post"
                         enctype="multipart/form-data">
+Quiz name: <input type="text" name="QuizName"><br>
+Deadline: <input type="date" name="Deadline">
+<label for="file">Filename:</label>
 <input type="file" name="file" size="50" />
 <br />
 <input type="submit" value="Upload File" />
