--- a/PHP_Codes/upload.html
+++ b/PHP_Codes/upload.html
@@ -5,7 +5,7 @@
 <body>
 <h3>File Upload:</h3>
 Select a file to upload: <br />
-<form action="/app/file_uploader.php" method="post"
+<form action="file_uploader.php" method="post"
                         enctype="multipart/form-data" >
 Quiz name: <input type="text" name="QuizName"><br>
 Deadline: <input type="date" name="Deadline">
